--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.15",
+    "file-loader": "^6.2.0",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3"
   }
